--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -79,14 +78,15 @@
 
                 <TextView
                     android:id="@+id/bigtext4"
-                    android:layout_width="180dp"
+                    android:layout_width="175dp"
                     android:layout_height="wrap_content"
                     android:text="С 15 по 24 февраля"
                     android:textSize="15dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:textColor="@color/silver"
-                    android:layout_below="@+id/bigtext2">
+                    android:layout_below="@+id/bigtext2"
+                    tools:ignore = "LabelFor" >
                 </TextView>
 
                 <Button
